# forklift

./: .gitignore  AGENTS.md  FORK.md  README.md  forklift-design.md  forklift-v0-design.md  pyproject.toml
.omp/: lsp.yaml
docker/kitchen-sink/: Dockerfile
docker/kitchen-sink/harness/py/: pyproject.toml
docker/kitchen-sink/harness/py/forklift_harness/: __init__.py  agent.py  agent_deps.py  backstop.py  command_parse.py  control.py  diagnostics_toolset.py  file_toolset.py  logging_setup.py  mediate.py  orchestrate.py  rebase_state.py  system_prompt.py  target_repo.py  toolset.py  transitions.py
specs/: AGENTS.md
specs/cross-container-rebase-events/: .qs  design.md  proposal.md  tasks.md
specs/custom-harness/: .qs  design.md  proposal.md  tasks.md
specs/imperative-rebase-management/: .qs  design.md  proposal.md  tasks.md
src/forklife/: __init__.py
src/forklift/: __init__.py  changelog.py  changelog_analysis.py  changelog_llm.py  changelog_models.py  (+26 more)
tests/: conftest.py  test_agent.py  test_agent_endrun.py  test_backstop.py  test_changelog.py  test_cli_post_run.py  test_cli_runtime.py  test_clientlog.py  test_command_parse.py  test_container_runner_run_state.py  test_diagnostics_toolset.py  test_files.py  test_first.py  test_forklift_env.py  test_harness_rebase.py  test_harness_setup.py  test_logs.py  test_mermaid_parser.py  test_models_dev.py  test_opencode_entrypoint.py  test_orchestrate.py  test_post_run_metrics.py  test_rebase_event_protocol.py  test_run_cleanup.py  test_run_manager.py  test_run_summary.py  test_self_hosting.py  test_target_policy.py  test_target_repo.py  test_telemetry.py  test_toolset.py
(+134 files in other folders)
