[project]
name = "forklife"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
forklife = "forklife:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
