[project]
name = "forklift"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clypi==1.8.2",
    "pydantic==2.12.5",
    "pydantic-ai==1.59.0",
    "rich~=14.3",
    "structlog~=25.5",
]

[project.scripts]
forklift = "forklift:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "recommended"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ruff>=0.15.1",
]
